# aster-rpc

./: .gitignore  .publicignore  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  aster-docs  aster-website  deny.toml  install.sh  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/runner/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  setup-windows.ps1
.github/workflows/: build-cli.yml  build-dotnet.yml  build-ffi.yml  build-java.yml  build-typescript.yml  build.yml  ci-typescript.yml  ci.yml  cleanup-runners.yml  mirror-public.yml  mobile.yml
aster_transport_core/src/: lib.rs
aster_transport_ffi/: Cargo.toml  cbindgen.toml
aster_transport_ffi/src/: lib.rs
aster_transport_ffi/tests/: test_ffi.rs
benchmarks/: bench_reactor_poll.py
benchmarks/codec-comparison/: dependency-reduced-pom.xml  pom.xml
benchmarks/grpc-baseline/: benchmark.py  mission_control_pb2.py  mission_control_pb2_grpc.py  server.py
benchmarks/grpc-java-mission-control/: pom.xml
benchmarks/remote/: aster_reactor_server.py  aster_server.py  bench_client.py  gen_certs.py  grpc_server_tls.py
bindings/aster_python/: __init__.py  __init__.pyi
bindings/aster_python_rs/: Cargo.toml
bindings/dotnet/: Aster.sln  DESIGN_DECISIONS.md
bindings/go/: PHASE8.md  PROGRESS.md  README.md  blobs.go  blobs_test.go  codec.go  config.go  connection.go  cq_fake.go  cq_test.go  crypto.go  crypto_test.go  docs.go  docs_test.go  endpoint.go  endpoint_extras_test.go  error.go  go.mod  go.sum  gossip.go  gossip_test.go  hooks.go  hostile_race_cgo.go  hostile_race_test.go  interceptors.go  iroh.go  node.go  reactor.go  registry.go  registry_ffi.go  runtime.go  server.go  soak_cgo.go  soak_helpers.go  soak_test.go  stream.go  tags.go  testnode  types.go
bindings/java/: .editorconfig  PHASE8.md  PHASE_5B_TESTS.md  PROGRESS.md  checkstyle.xml  pom.xml  spotbugs-exclude.xml
bindings/python/rust/: Cargo.toml
bindings/python/rust/src/: blobs.rs  call.rs  contract.rs  crypto.rs  docs.rs  error.rs  hooks.rs  lib.rs  monitor.rs  net.rs  node.rs  ticket.rs
bindings/typescript/: aster-rpc.generated.ts  package.json
bindings/typescript/native/: Cargo.toml  index.d.ts  index.js  package.json
bindings/typescript/native/src/: blobs.rs  call.rs  contract.rs  docs.rs  error.rs  gossip.rs  hooks.rs  lib.rs  net.rs  node.rs  reactor.rs  ticket.rs
cli/: aster_entry.py  pyproject.toml
cli/aster_cli/: __init__.py  access.py  aster_service.py  codegen.py  codegen_typescript.py  contract.py  credentials.py  enroll.py  handle_validation.py  identity.py  init.py  join.py  keygen.py  main.py  profile.py  publish.py  signer.py  trust.py
cli/aster_cli/mcp/: __init__.py  schema.py  security.py  server.py
cli/aster_cli/shell/: COMMANDS.md  __init__.py  app.py  commands.py  completer.py  display.py  guide.py  hooks.py  invoker.py  plugin.py  vfs.py
cli/aster_cli/templates/llm/: python.md
conformance/scenarios/: server-stream.yaml  unary-echo.yaml
core/: Cargo.toml
core/benches/: ring_bench.rs
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: fuzz_base58_ticket.rs  fuzz_decode_frame.rs  fuzz_target_1.rs
core/src/: canonical.rs  contract.rs  framing.rs  lib.rs  pool.rs  reactor.rs  registry.rs  ring.rs  signing.rs  ticket.rs
core/tests/: multiplexed_contract.rs
docs/: cicd.md  endpointbuildergaps.md  reorg_plan.md
examples/: gossip_chat.py  mypy_check.py  sendme_recv.py  sendme_send.py
ffi/: Cargo.toml  UNSAFE_AUDIT.md  cbindgen.toml  fixes.txt  iroh_ffi.h
ffi/benches/: ffi_benchmarks.rs
ffi/fuzz/: Cargo.toml
ffi/fuzz/corpus/abi_struct_parsing/: valid_struct
ffi/fuzz/corpus/length_pointer_combos/: valid_ptr
ffi/fuzz/corpus/oversized_lengths/: normal_lengths  oversized
ffi/fuzz/fuzz_targets/: abi_struct_parsing.rs  dup_release_cancel.rs  event_decode.rs  invalid_handle_opid.rs  length_pointer_combos.rs  malformed_batch.rs  oversized_lengths.rs
ffi/src/: call.rs  lib.rs  probe.rs  reactor.rs
ffi/tests/: abi_contract_test  abi_contract_test.c  conformance_test.rs  cq_concurrency_loom.rs  cq_state_machine.rs  hostile_race_integration_tests.rs  reactor_test.rs  soak_test.rs  test_ffi.rs
ffi/tests/common/: mod.rs
ffi/tests/conformance/: cancel_before_accept.json  close_while_pending.json  happy_path.json  schema.json
ffi_spec/: 13-April-Remaining-items.md  ASTER_PLAN.md  ASTER_PLAN_CHECKLIST.md  ASTER_SPEC_ISSUES.md  Aster-ADOPTION.md  Aster-ContractIdentity.md  Aster-E2E-flow.md  Aster-SPEC.md  Aster-multiplexed-streams.md  Aster-observability-spec.md  Aster-session-scoped-services.md  Aster-trust-spec.md  FFI_API_SURFACE.md  FFI_PLAN.md  FFI_PLAN_CHECKLIST.md  FFI_PLAN_PATCH.md  IrohNative.java  PERF_FFI_CROSSINGS.md  STATUS.md  handler-context-design.md  iroh_bridge.h  iroh_bridge.rs  iroh_java_ffi_ffm_abi_spec_v2.md  java-ffi-ffm-readiness-punch-list.md  python_example_producer.md  registry-rust-centralization.md  session-instructions-handler-context.md  session-instructions-mode2-inline-params.md  session-instructions-registry-rust.md  spec_audit.md  ts-buildtime-audit.md
internaldocs/: contract-id-rationale.md
iroh_python/: __init__.py  __init__.pyi  _iroh_python.pyi
iroh_python_rs/: Cargo.toml
iroh_python_rs/src/: blobs.rs  docs.rs  error.rs  gossip.rs  hooks.rs  lib.rs  monitor.rs  net.rs  node.rs
iroh_transport_core/: Cargo.toml
iroh_transport_core/src/: lib.rs
iroh_transport_ffi/: Cargo.toml  cbindgen.toml  fixes.txt
iroh_transport_ffi/src/: lib.rs
iroh_transport_ffi/tests/: test_ffi.rs
iroh_transport_ffi/tests/common/: mod.rs
ops/: grafana-dashboard.json
scripts/: build-api-docs.sh  build.sh  capability_compare.py  capability_scan.py  check-cli-compat.py  combine_spec.py  cross_lang_echo_contract_id.py  gen_canonical_vectors.py  get-git-dir.sh  install-git-hooks.sh  pin-fork-deps.sh  release.sh  security-review.sh  split_spec.py  validate.sh
tests/: .gitkeep  conftest.py  test_blobs.py  test_docs.py  test_gossip.py  test_net.py  test_node.py  test_phase1b.py
tools/: gen_canonical_vectors.py
(+802 files in other folders)
