[workspace]
members = ["iroh_transport_core", "iroh_transport_ffi", "iroh_python_rs"]
resolver = "2"

[workspace.dependencies]
# Core Iroh
iroh        = "0.97.0"

# Protocol Crates (Option B - Router Pattern)
iroh-blobs  = "0.99.0"  # ⚠️ Not production-ready per README, but usable
iroh-docs   = "0.97.0"
iroh-gossip = "0.97.0"
iroh-tickets = "0.4.0"
# iroh-automerge = { git = "https://github.com/n0-computer/iroh-automerge", branch = "main" }  # Experimental/optional

# Python FFI
pyo3        = { version = "0.20.0", features = ["extension-module", "abi3-py39"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Common dependencies
tokio       = { version = "1", features = ["full"] }
bytes       = "1"
anyhow      = "1"
futures-lite = "2"
once_cell = "1"
libc = "0.2"
rand = "0.10.0"
