[build-system]
requires      = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name    = "aster-python"
version = "0.1.0"
description = "Python bindings for the Iroh peer-to-peer networking library"
requires-python = ">=3.9"
dependencies = [
    "blake3>=1.0.8",
    "cryptography>=42",
    "pyfory==0.16.0",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
iid = ["PyJWT>=2.8"]

[tool.maturin]
module-name    = "aster_python._aster_python"
manifest-path  = "bindings/python/rust/Cargo.toml"
features       = ["pyo3/extension-module"]
python-source  = "bindings/python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]
# Suppress known Cython warning from pyfory's internal pxd/enum mismatch.
# pyfory 0.16.0 ships a cpdef enum in a .pxd file whose Python wrapper is
# not importable from pyfory.includes.libformat.  Benign third-party issue.
filterwarnings = [
    "ignore:.*enum class CTypeId not importable from pyfory\\.includes\\.libformat.*:UserWarning",
]
