[build-system]
requires      = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name    = "aster-rpc"
version = "0.1.0"
description = "Aster RPC framework with Iroh P2P transport (Python bindings)"
requires-python = ">=3.9"
dependencies = [
    "blake3>=1.0.8",
    "cryptography>=42",
    "pyfory==0.16.0",
    "zstandard>=0.25.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
iid = ["PyJWT>=2.8"]

[tool.maturin]
module-name    = "aster._aster"
manifest-path  = "bindings/python/rust/Cargo.toml"
features       = ["pyo3/extension-module"]
python-source  = "bindings/python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]
# Retry integration tests that involve real network I/O up to 2 extra times
# before counting them as failures.  Requires pytest-rerunfailures.
reruns = 2
reruns_delay = 2
# Suppress known Cython warning from pyfory's internal pxd/enum mismatch.
# pyfory 0.16.0 ships a cpdef enum in a .pxd file whose Python wrapper is
# not importable from pyfory.includes.libformat.  Benign third-party issue.
markers = [
    "network: tests that require real network I/O (node pairs, gossip, etc.)",
]
filterwarnings = [
    "ignore:.*enum class CTypeId not importable from pyfory\\.includes\\.libformat.*:UserWarning",
]
