[build-system]
requires      = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name    = "aster-rpc"
version = "0.1.2"
description = "Aster RPC framework with Iroh P2P transport (Python bindings)"
requires-python = ">=3.9,<3.14"
dependencies = [
    "blake3>=1.0.8",
    "cryptography>=42",
    "pyfory==0.16.0",
    "zstandard>=0.25.0",
    "tomli>=2.0; python_version < '3.11'",
    # uvloop: libuv-backed asyncio replacement, ~20-25% faster on the
    # RPC hot path. Required on Linux/macOS, skipped on Windows (no
    # uvloop support there). Auto-installed at import time; opt out
    # with ASTER_NO_UVLOOP=1.
    "uvloop>=0.19; sys_platform != 'win32'",
]

[project.optional-dependencies]
iid = ["PyJWT>=2.8"]

[tool.maturin]
module-name    = "aster._aster"
manifest-path  = "bindings/python/rust/Cargo.toml"
features       = ["pyo3/extension-module"]
python-source  = "bindings/python"
# python-source restricts the sdist scope to bindings/python/, but maturin
# auto-adds `License-File: LICENSE` to PKG-INFO when it sees a LICENSE file
# at the project root. PyPI's PEP 639 check rejects sdists where the
# declared license-file is not actually in the tarball, so we have to
# explicitly include LICENSE in both wheel and sdist artifacts.
include        = ["LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]
# Retry integration tests that involve real network I/O up to 2 extra times
# before counting them as failures.  Requires pytest-rerunfailures.
reruns = 2
reruns_delay = 2
# Suppress known Cython warning from pyfory's internal pxd/enum mismatch.
# pyfory 0.16.0 ships a cpdef enum in a .pxd file whose Python wrapper is
# not importable from pyfory.includes.libformat.  Benign third-party issue.
markers = [
    "network: tests that require real network I/O (node pairs, gossip, etc.)",
    "iroh_primitives: tests for iroh upstream primitives (blobs, docs, gossip, dumbpipe, raw QUIC). Run when iroh deps or our Rust binding changes.",
]
filterwarnings = [
    "ignore:.*enum class CTypeId not importable from pyfory\\.includes\\.libformat.*:UserWarning",
]
