[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name    = "aster-cli"
version = "0.1.1"
description = "Aster RPC framework command-line tools"
requires-python = ">=3.9,<3.14"
dependencies = [
    "aster-rpc>=0.1.1",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "mcp>=1.0",
    "keyring>=25.0",
]

[project.scripts]
aster = "aster_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
aster_cli = ["templates/llm/*.md"]
