[package]
name = "aster_transport_core"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = { workspace = true, features = ["address-lookup-mdns"] }
iroh-blobs = { workspace = true }
iroh-docs = { workspace = true }
iroh-gossip = { workspace = true }
iroh-tickets = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
bytes = { workspace = true }
anyhow = { workspace = true }
futures-lite = { workspace = true }
tracing = "0.1"
url = "2.5"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
hex = "0.4"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
