[package]
name    = "iroh_python_rs"
version = "0.1.0"
edition = "2021"

[lib]
name    = "iroh_python"
crate-type = ["cdylib"]

[dependencies]
iroh_transport_ffi = { path = "../iroh_transport_ffi" }

# Python FFI
pyo3        = { workspace = true }
pyo3-asyncio = { workspace = true }

# Common dependencies
tokio       = { workspace = true }
