[package]
name = "iroh_transport_core"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-docs = { workspace = true }
iroh-gossip = { workspace = true }
iroh-tickets = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
futures-lite = { workspace = true }
