[package]
name = "iroh_transport_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
iroh_transport_core = { path = "../iroh_transport_core" }
tokio = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
