[package]
name = "aster_transport_core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.aster_transport_core]
path = ".."

[[bin]]
name = "fuzz_ticket_decode"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_base58_ticket"
path = "fuzz_targets/fuzz_base58_ticket.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_frame"
path = "fuzz_targets/fuzz_decode_frame.rs"
test = false
doc = false
bench = false
