[package]
name = "aster_transport_ffi_fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Fuzz targets exercise raw byte layouts and don't directly `use`
# aster_transport_ffi, but cargo-fuzz needs the dep relationship to
# build them in the workspace. Suppress cargo-machete's false positive.
[package.metadata.cargo-machete]
ignored = ["aster_transport_ffi"]

[dependencies]
aster_transport_ffi = { path = ".." }
libfuzzer-sys = "0.4"

# Each fuzz target is a separate binary

[[bin]]
name = "event_decode"
path = "fuzz_targets/event_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "abi_struct_parsing"
path = "fuzz_targets/abi_struct_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "length_pointer_combos"
path = "fuzz_targets/length_pointer_combos.rs"
test = false
doc = false
bench = false

[[bin]]
name = "invalid_handle_opid"
path = "fuzz_targets/invalid_handle_opid.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dup_release_cancel"
path = "fuzz_targets/dup_release_cancel.rs"
test = false
doc = false
bench = false

[[bin]]
name = "malformed_batch"
path = "fuzz_targets/malformed_batch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oversized_lengths"
path = "fuzz_targets/oversized_lengths.rs"
test = false
doc = false
bench = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

[profile.dev.package.libfuzzer_sys]
opt-level = 0
