[package]
name    = "aster_rs"
version = "0.1.0"
edition = "2021"

[lib]
name    = "_aster"
crate-type = ["cdylib"]

[dependencies]
# Core transport layer - the authoritative backend for all Python bindings
aster_transport_core = { path = "../../../core" }

# Python FFI
pyo3        = { workspace = true }
pyo3-async-runtimes = { workspace = true }

# Serialization (needed for contract submodule JSON dispatch)
serde_json  = "1"

# Common dependencies
tokio       = { workspace = true }
