[package]
name    = "aster_rs"
version = "0.2.0"
edition = "2021"

[lib]
name    = "_aster"
crate-type = ["cdylib"]

[dependencies]
# Core transport layer - the authoritative backend for all Python bindings
aster_transport_core = { path = "../../../core" }

# Python FFI
pyo3        = { workspace = true }
pyo3-async-runtimes = { workspace = true }

# Serialization (needed for contract submodule JSON dispatch)
serde_json  = "1"

# Common dependencies
tokio       = { workspace = true }
hex         = "0.4"

# Crypto primitives (exposed to Python, replacing cryptography + blake3 packages)
blake3          = "1"
ed25519-dalek   = { version = "=3.0.0-pre.6", features = ["rand_core"] }
getrandom       = "0.3"
