[package]
name = "aster-transport-napi"
version = "0.1.0"
edition = "2021"
description = "NAPI-RS bindings for Aster transport (Iroh P2P)"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aster_transport_core = { path = "../../../core" }
napi = { version = "2", default-features = false, features = ["async", "napi9"] }
napi-derive = "2"
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = "1"
hex = "0.4"

[build-dependencies]
napi-build = "2"
